# FasionMatchAI

./: App.tsx  README.md  architecture_assessment.md  constants.ts  index.css  index.html  markdown.txt  metadata.json  package-lock.json  package.json  supabase_schema.sql  types.ts
agents_external/extracted_zip/: README.md  pyproject.toml
agents_external/extracted_zip/src/fashionmatch_ai___complete_technical_implementation_automation/: crew.py
agents_external/extracted_zip/src/fashionmatch_ai___complete_technical_implementation_automation/config/: agents.yaml
agents_external/src/fashionmatch_ai___complete_technical_implementation_automation/: main.py
agents_sprint5&6/: README.md  pyproject.toml
agents_sprint5&6/src/fashionmatch_ai___sprint_5_6_react_native_backend_development/: crew.py  main.py
components/: ItemDetailModal.tsx  PopularWardrobes.tsx  StylistChat.tsx  UserProfile.tsx  WardrobeItemCard.tsx  WardrobeUploader.tsx
mobile_app/: App.js  package-lock.json  package.json
mobile_app/src/components/: Button.tsx  Card.tsx  Input.tsx  ItemDetailModal.tsx  LoadingSpinner.tsx  WardrobeItemCard.tsx
mobile_app/src/navigation/: MainNavigation.tsx
mobile_app/src/screens/: AuthScreen.tsx  ClosetScreen.tsx  DiscoverScreen.tsx  ProfileScreen.tsx  StylistScreen.tsx  UploadScreen.tsx
mobile_app/src/services/: gemini.ts  supabase.ts
mobile_app/src/store/: authStore.ts  wardrobeStore.ts
mobile_app/src/types/: index.ts
supabase/functions/analyze-garment/: index.ts
supabase/functions/get-daily-picks/: index.ts
supabase/functions/stylist-chat/: index.ts
(+3 files in other folders)
