[project]
name = "fashionmatch_ai___complete_technical_implementation_automation"
version = "0.1.0"
description = "fashionmatch_ai___complete_technical_implementation_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.9.3",
]

[project.scripts]
fashionmatch_ai___complete_technical_implementation_automation = "fashionmatch_ai___complete_technical_implementation_automation.main:run"
run_crew = "fashionmatch_ai___complete_technical_implementation_automation.main:run"
train = "fashionmatch_ai___complete_technical_implementation_automation.main:train"
replay = "fashionmatch_ai___complete_technical_implementation_automation.main:replay"
test = "fashionmatch_ai___complete_technical_implementation_automation.main:test"
run_with_trigger = "fashionmatch_ai___complete_technical_implementation_automation.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
